tests/Call.switch/Call.p2m_m/Call.p2m_m.3.1.check
// exitCode: 1
-- Error: tests/Call.p2m_m.scala:2:26 ------------------------------------------
2 |class P2M extends P { def d() = "" }
  |                          ^
  |                   error overriding method d in trait P of type => String;
  |                     method d of type (): String has incompatible type
1 error found
